--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+#managment_system:
+#  resource: "@AppBundle/Controller/"
+#  type:     annotation
+#  prefix:   /{_locale}/
+#  requirements:
+#    _locale: %locales%
